<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UPlan</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Sign up and start scheduling faster!</string>
    <string name="login">LogIn</string>
    <string name="signup">SignUp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="student_number">Student Number</string>
    <string name="utmail">UTmail</string>
    <string name="fr_email">FriendEmail</string>
    <string name="locate">FriendEmail</string>
    <string name="signout">Signout</string>
    <string name="locate_friend">Locate Your Friend</string>
    <string name="friend_list">Your Friends</string>
    <string name="AddedFriends">Added Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="register_message">Register your Account</string>
    <string name="event_list">Your Events</string>
    <string name="event_prompt">Choose an event</string>
    <string name="create_meeting">Create an event</string>
    <string name="eventType">Event Type</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="EventHint">Enter event name</string>
    <string name="FriendHint">Invite Friends</string>
    <string name="LocationHint">Add Location</string>
    <string name="SubmitText">Submit</string>
    <string name="ClearText">Clear</string>
    <string name="Yes">Accept</string>
    <string name="No">Decline</string>
    <string name="EventInvite">Event Invite</string>
    <string name="EventUpadate">Event Update</string>
    <string name="Name">Name: </string>
    <string name="When">When: </string>
    <string name="Creator">Creator: </string>
    <string name="Location">Location: </string>
    <string name="Invitees">Invitees: </string>
    <string name="findById">Find By Id: </string>
    <string name="findByType">Find By Type: </string>
    <string name="where">Enter Location OR Select from drop down list: </string>

    <string-array name="eventType_array">
        <item>Office Hours</item>
        <item>Group Study</item>
        <item>Computer Lab</item>
    </string-array>

    <string name="title_map">Map</string>
    <string name="title_chat">Chat</string>
    <string name="title_OrganizeEvent">Organize Event</string>
    <string name="title_friends">Friends</string>
    <string name="title_SetupOfficeHours">Set up Office Hours</string>
    <string name="title_signout">Signout</string>
    <string name="title_resources">Resources</string>
    <string name="title_privacySettings">Privacy Settings</string>
    <string name="title_event_invite">Event Invite</string>
    <string name="title_event_update">Event Update</string>
    <string name="title_displayEvents">All Events</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="Test">TestEx</string>
    <string name="pick_time">Select Time</string>
    <string name="title_activity_time_pick">TimePickActivity</string>
    <string name="title_activity_time_pickr">TimePickrActivity</string>
    <string name="pick_date">Select a date</string>
    <string name="menu_up">Floor Up</string>
    <string name="menu_down">Floor Down</string>
    <string name="menu_start">Start</string>
    <string name="menu_stop">Stop</string>
    <string name="resources">Resource Type</string>
    <string name="find">Find</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="locationSharing">Location Sharing</string>
    <string name="locationType">Location Type</string>
    <string name="locationList">Location List</string>

    <string-array name="resourceType">
        <item>Lab</item>
        <item>Room</item>
        <item>Washroom</item>
        <item>Studying</item>
        <item>Elevator/Stairs</item>
        <item>Other</item>
    </string-array>
    
    <string-array name="resourceTypeLab">
        <item>Undergraduate Lab</item>
        <item>Graduate Lab</item>
    </string-array>
    
    <string-array name="resourceTypeRoom">
        <item>Lecture Room</item>
        <item>Meeting Room</item>
        <item>Library</item>
    </string-array>
    
    <string-array name="resourceTypeWashroom">
        <item>Male</item>
        <item>Female</item>
        <item>Family</item>
    </string-array>
    
    <string-array name="resourceTypeStudyArea">
        <item>Study Area</item>
        <item>Tutorial Rooms</item>
        <item>Graduate Students Study Area</item>
    </string-array>
    
    <string-array name="resourceTypeElevatorStairs">
        <item>Elevator</item>
        <item>Stairs</item>
    </string-array>
    
    <string-array name="resourceTypeOther">
        <item>Cafeteria</item>
        <item>Office</item>
        <item>Prayer Room</item>
        <item>Exit</item>
    </string-array>

    <string name="title_activity_display_event">DisplayEventActivity</string>

</resources>
