<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.uoft.campusplannerapp.MainActivity" >
       <item
        android:id="@+id/menu_start"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_start"/>
    
        <item
        android:id="@+id/menu_stop"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_stop"/>
             
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/signout"
        android:orderInCategory="100"
        android:title="@string/signout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/friend"
        android:orderInCategory="100"
        android:title="@string/friend_list"
        app:showAsAction="never"/>

    <item
        android:id="@+id/meeting"
        android:orderInCategory="100"
        android:title="@string/create_meeting"
        app:showAsAction="never"/>

</menu>
