<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/first_name" >

    </TextView>

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:hint="@string/first_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:hint="@string/last_name" >
   </EditText>
        


    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/utmail" />

    <EditText
        android:id="@+id/utmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:hint="@string/utmail" >

    </EditText>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/n_password_id"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:hint="@string/password" >

    </EditText>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup" 
        android:onClick ="grab_signup_data"/>

</LinearLayout>
