<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
	android:paddingBottom="@dimen/activity_vertical_margin"
  	android:paddingLeft="@dimen/activity_horizontal_margin"
  	android:paddingRight="@dimen/activity_horizontal_margin"
  	android:paddingTop="@dimen/activity_vertical_margin"
  	tools:context ="com.uoft.campusplannerapp.MainActivity" >    

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/username" >

    </TextView>

    <EditText
        android:id="@+id/username_id"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:hint="@string/username" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password_id"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:hint="@string/password" >

    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" 
        android:onClick ="grab_login_data"/>

</LinearLayout>
