<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <View 
        android:layout_width="wrap_content"
        android:layout_height="30dip" />
    
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/eventType_array"
        android:prompt="@string/event_prompt" />

    <View 
        android:layout_width="wrap_content"
        android:layout_height="30dip" />
    
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <View 
        android:layout_width="wrap_content"
        android:layout_height="30dip" />
    
    <Button 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:text="@string/pick_time" 
    	android:onClick="showTimePickerDialog" />
 
    <View 
        android:layout_width="wrap_content"
        android:layout_height="30dip" />

    <Button 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:text="@string/pick_date" 
    	android:onClick="showDatePickerDialog" />
 
    <View 
        android:layout_width="wrap_content"
        android:layout_height="30dip" />    
    
    <Button
        android:id="@+id/angry_btn"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/submitbuttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="Submit"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

</LinearLayout>