<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF6600"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ccom.uoft.campusplannerapp.MainActivity" >

    <TextView
        android:id="@+id/welcomeid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_marginTop="136dp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="@string/welcome_message"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/welcomeid"
        android:layout_marginBottom="19dp"
        android:background="@drawable/signupbuttonshape"
        android:onClick="signup_button"
        android:shadowColor="#0"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/signup"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignLeft="@+id/welcomeid"
        android:background="@drawable/loginbuttonshape"
        android:onClick="login_button"
        android:shadowColor="#0"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

</RelativeLayout>